# oramsef

./: .gitignore  EyeFatigueDetector.spec  README.md  SETUP-GUIDE.md  STARTUP-OPTIMIZATION.md  modulEAR.py  pyproject.toml  requirements.txt  setup.py  startup_monitor.py  startup_progress.txt  test.py  test1.py  test2.py  test3.py  test_ws.py
Module/: mainDist.py  modulDist.py  modulEAR.py
Website/: detector.html  index.html  manifest.json  script.js  style.css  sw.js
